Ispravke u mapperima i JwtAuthFilter.